--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
   <head>
     <title>test</title>
     <style>h1 {color: darkred;}</style>
+    <script defer src="site.js"></script>
   </head>
   <body>
-    <h1>hello i'm your test 3</h1>
-    
+    <h1>hello i'm your test 4</h1>
   </body>
-  <script>
-    (() => {
-      document.querySelector("h1").insertAdjacentHTML('afterend','<textarea>'+ ocument.querySelector("body").outerHTML +'</textarea>')
-    })()
-  </script>
 </html>
