--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   lang="en">
   <head>
     <title>test</title>
-    <style>h1 {color: darkred;}</style>
+    <style>
+      body {padding: 20px;}
+      h1 {color: darkred;}
+      textarea {width: 98.5%; min-height: 100px;}
+    </style>
     <script defer src="site.js"></script>
   </head>
   <body>
-    <h1>hello i'm your test 4</h1>
+    <h1>Hello, i'm your test 5</h1>
   </body>
 </html>
